Fix liked button position on smaller device screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {
     height: 100vh;
 
     background-color: #918E85;
-    opacity: 0.95;
+    opacity: 0.99;
     background: url("../images/mae-mu-1LPsUqjb_Jg-unsplash.jpg") no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
